# advent-of-code

./: .gitignore
2020/: Cargo.toml
2020/prob01/: a.rs  b.rs  solution.rs  thoughts.md
2020/prob02/: a.rs  b.rs  solution.rs
2020/prob03/: README.md  solution.rs
2020/prob04/: input  solution.rs
2020/prob05/: README.md  solution.rs
2020/prob06/: README.md  input  solution.rs
2020/prob07/: README.md  sample  solution.rs
2020/prob08/: solution.rs
2020/prob09/: better.rs  solution.rs
2020/src/: main.rs  vec2d.rs
2020/src/prob01/: mod.rs
2020/src/prob02/: README.md  mod.rs
2020/src/prob03/: input  mod.rs  sample
2020/src/prob04/: README.md  mod.rs
2020/src/prob05/: input  mod.rs
2020/src/prob06/: mod.rs
2020/src/prob07/: input  mod.rs
2020/src/prob08/: README.md  mod.rs
2020/src/prob09/: README.md  better.rs  input  mod.rs
2020/src/prob10/: input  mod.rs  sample
2020/src/prob11/: README.md  input  mod.rs  sample
2020/src/prob12/: README.md  input  mod.rs  sample
